# VocAccelerator

./: .gitignore  CMakeLists.txt  Checker.cpp  Checker.hpp  Conjugation.cpp  Conjugation.hpp  Database.cpp  Database.hpp  GuessWindow.ui  GuessWindowController.cpp  GuessWindowController.hpp  README.md  VocEntry.cpp  VocEntry.hpp  VocView.cpp  VocView.hpp  Word.cpp  Word.hpp  base.ui  conjugation.ui  default.ui  main.cpp  test.cpp  test.ui  testing.xml  textguess.ui
tinyxml2/: CMakeLists.txt  LICENCE  tinyxml2.h
