cmake_minimum_required (VERSION 2.6)
project (VocAccelerator)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
include_directories(${QT_QTCORE_INCLUDE_DIR})
include_directories(${QT_QTGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
QT4_WRAP_UI(testui test.ui)
add_executable(test test.cpp ${testui})
target_link_libraries(test ${QT_QTCORE_LIBRARY})
target_link_libraries(test ${QT_QTGUI_LIBRARY})
